# csvsql

./: .gitignore  Cargo.toml  README.md  build
.github/workflows/: push.yaml  release.yaml
docker/: Dockerfile
docs/: ToDos.md  differences-from-sql.md  examples.md  install.md  supported_functions.md  usage.md
docs/examples/data/: file.csv  owners.csv  pets.csv
src/: alter.rs  args.rs  cartesian_product_results.rs  cast.rs  console.rs  create_table.rs  delete.rs  dialect.rs  drop.rs  engine.rs  error.rs  extract_time.rs  extract_values.rs  extractor.rs  file_results.rs  filter_results.rs  functions.rs  group_by.rs  insert.rs  intrim_result_set.rs  join.rs  lib.rs  main.rs  named_results.rs  order_by_results.rs  outputer.rs  projections.rs  result_set_metadata.rs  results.rs  results_builder.rs  results_data.rs  session.rs  show.rs  simple_result_set_metadata.rs  stdin_as_table.rs  table.rs  transaction.rs  trimmer.rs  update.rs  util.rs  (+2 more)
src/snapshots/: csvsql__table__tests__draw_table-12.snap  csvsql__table__tests__draw_table-14.snap  csvsql__table__tests__draw_table-16.snap  csvsql__table__tests__draw_table-3.snap  csvsql__table__tests__draw_table-4.snap  csvsql__table__tests__draw_table-5.snap
test/: one.csv  two.csv
tests/: integrations_tests.rs
tests/data/: albums.csv  artists.csv  customers.csv  dates.csv  sales.csv
tests/errors/alter_table/: error.0.txt  error.1.txt  error.2.txt  error.3.txt  error.5.txt  error.6.txt  error.7.txt  query.sql
tests/errors/create_table/: error.1.txt  error.2.txt  error.3.txt  error.4.txt  error.5.txt  error.6.txt  error.8.txt  error.9.txt  query.sql
tests/errors/create_table_in_write_mode/: error.0.txt  error.1.txt  query.sql
tests/errors/delete/: error.1.txt  error.2.txt  error.3.txt  error.4.txt  error.5.txt  error.6.txt  query.sql
tests/errors/drop_table/: error.0.txt  error.1.txt  error.2.txt  error.3.txt  error.4.txt  error.5.txt  query.sql
tests/errors/drop_table_write_mode/: error.0.txt  query.sql
tests/errors/functions/: error.0.txt  error.1.txt  error.11.txt  error.2.txt  error.3.txt  error.4.txt  error.5.txt  error.6.txt  error.7.txt  error.8.txt  error.9.txt  query.sql
tests/errors/insert/: error.0.txt  query.sql
tests/errors/join/: error.0.txt  error.1.txt  error.2.txt  query.sql
tests/errors/projection/: error.0.txt  error.1.txt  error.2.txt  error.3.txt  query.sql
tests/errors/select/: error.0.txt  error.1.txt  error.10.txt  error.11.txt  error.12.txt  error.13.txt  error.14.txt  error.15.txt  error.16.txt  error.17.txt  error.18.txt  error.19.txt  error.2.txt  error.3.txt  error.4.txt  error.5.txt  error.6.txt  error.7.txt  error.8.txt  error.9.txt  query.sql
tests/errors/session/: error.0.txt  error.1.txt  error.3.txt  error.4.txt  error.5.txt  error.6.txt  query.sql
tests/errors/use/: error.0.txt  error.1.txt  error.2.txt  error.3.txt  error.4.txt  error.5.txt  (+3 more)
(+127 files in other folders)
