[package]
name = "csvsql"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
bigdecimal = "0.4"
chrono = "0.4"
csv = "1.3"
sqlparser = {version = "0.55", features = ["bigdecimal"]}
itertools = "0.14"
regex = "1.11"
whoami = "1.6"
rand = "0.9"
tempfile = "3.19"
reedline = "0.39"
dirs = "6.0"
sha256 = "1.6"
crossterm = "0.28.1"
ratatui = "0.29"
unicode-width = "0.2"
html-escape = "0.2"
serde_json = "1.0"
rust_xlsxwriter = "0.86"

[dev-dependencies]
toml = "0.8"