[package]
name = "csvsql"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "SQL like engine that works on CSV file."
homepage = "https://github.com/yift/csvsql"
repository = "https://github.com/yift/csvsql"
documentation = "https://github.com/yift/csvsql/blob/main/README.md"
readme = "README.md"
exclude = ["/.github/*", "/.gitignore"]
keywords = ["csv", "sql"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
bigdecimal = "0.4"
chrono = "0.4"
csv = "1.3"
sqlparser = {version = "0.58", features = ["bigdecimal"]}
itertools = "0.14"
regex = "1.11"
whoami = "1.6"
rand = "0.9"
tempfile = "3.21"
reedline = "0.41"
dirs = "6.0"
sha256 = "1.6"
crossterm = "0.28.1"
ratatui = "0.29"
unicode-width = "0.2"
html-escape = "0.2"
serde_json = "1.0"
rust_xlsxwriter = "0.90"

[dev-dependencies]
toml = "0.9"
insta = "1.43"
scraper = "0.24"
calamine = {version = "0.30", features = ["dates"]}

[workspace.metadata.typos]
files.extend-exclude = [
    "results.*.csv",
    "*.snap",
    "docs/examples/data/**/*.csv"
]
default.extend-ignore-re = ["ratatui", "constraints"]