[package]
name = "csvsql"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "SQL like engine that works on CSV file."
homepage = "https://github.com/yift/csvsql"
repository = "https://github.com/yift/csvsql"
documentation = "https://github.com/yift/csvsql/blob/main/README.md"
readme = "README.md"
exclude = ["/.github/*", "/.gitignore"]
keywords = ["csv", "sql"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
bigdecimal = "0.4"
chrono = "0.4"
csv = "1.4"
sqlparser = {version = "0.61", features = ["bigdecimal"]}
itertools = "0.14"
regex = "1.12"
whoami = "2.1"
rand = "0.10"
tempfile = "3.27"
reedline = "0.46"
dirs = "6.0"
sha256 = "1.6"
crossterm = "0.29"
ratatui = "0.30"
unicode-width = "0.2"
html-escape = "0.2"
serde_json = "1.0"
rust_xlsxwriter = "0.94"

[dev-dependencies]
toml = "1.0"
insta = "1.46"
scraper = "0.25"
calamine = {version = "0.34", features = ["dates"]}

[workspace.metadata.typos]
files.extend-exclude = [
    "results.*.csv",
    "*.snap",
    "docs/examples/data/**/*.csv"
]
default.extend-ignore-re = ["ratatui", "constraints"]